complete app without search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsSimpleAirbnb</title>
+    <title>Simple Airbnb</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-light bg-light border-bottom">
+      <%= link_to 'Simple Airbnb', flats_path, class: 'no-decoration margin-left gray' %>
+      <div class="d-flex">
+      <form class="form-inline d-flex">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success margin-left" type="submit" style="color: #28a745">Search</button>
+      </form>
+      <%= link_to 'Add Flat', new_flat_path, class: 'btn btn-outline-primary margin-left margin-right', style: 'color: #69abfb' %>
+      </div>
+    </nav>
+
+      <%= yield %>
   </body>
 </html>
